[metadata]
name = deep_chainmap
version = 0.0.1
description = A recursive subclass of ChainMap
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/neutrinoceros/pyw
author = C.M.T. Robert
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages = find:
python_requires = >=3.6

[options.packages.find]
exclude =
    tests*
    testing*

[options.extras_require]
dev =
    pytest>=6.0.2
    pytest-cov

[mypy]
python_version = 3.6
warn_return_any = True
warn_unused_configs = True

[flake8]
exclude = pyw/__init__.py
ignore = E203, E501, W503
